Css fix for gap between flex children in Safari (#5697)
* css fix for gap between floex children insafari


* css fix for gap between floex children


* removed extra css

--- a/components/automate-ui/src/app/pages/data-feed-create/data-feed-create.component.scss
+++ b/components/automate-ui/src/app/pages/data-feed-create/data-feed-create.component.scss
@@ -10,10 +10,10 @@ main {
     padding: 54px 54px;
 
     .flex-child {
-      display: flex;
-      flex-direction: row;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 186px);
+      grid-column-gap: 66px;
       column-gap: 66px;
-      flex-wrap: wrap;
 
       .card {
         display: flex;
